--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         background-color: #426d9a;
         text-align: center;
         margin-top: 0px;
+        margin: 0px;
       }
       h1{
         font-size: 5rem;
