--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
     <p>It's Time to make you're Server Protected, Fun, and more great!</p>
     <h2> This website is under construction!</h2>
     <h3>Invite The Bot Today!</h3>
-    <h4>https://top.gg/bot/757745665651507291</h4>
+    <h4>
+      <a href="https://top.gg/bot/757745665651507291">Invite Bot</a>
+    </h4>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#9527c9" fill-opacity="1" d="M0,192L30,181.3C60,171,120,149,180,144C240,139,300,149,360,154.7C420,160,480,160,540,176C600,192,660,224,720,197.3C780,171,840,85,900,85.3C960,85,1020,171,1080,213.3C1140,256,1200,256,1260,256C1320,256,1380,256,1410,256L1440,256L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg>
     </div>
   </body>
